32-bit builds are broken after JDK-8230594

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P2
    • 15
    • Affects Version/s: 15
    • Component/s: hotspot
    • Environment:

      32-bit

    • 15
    • b08
    • Verified

      JDK-8230594 introduced use of:

        void add_target_count(int count) { Atomic::add(&_pending_threads, count); }

      That's an atomic add on int64_t value. This fails to compile on 32-bit (ARM) with:

      src/hotspot/share/runtime/atomic.hpp:741: error: undefined reference to 'long long Atomic::PlatformAdd<8u>::add_and_fetch<long long, long long>(long long volatile*, long long, atomic_memory_order) const'
      collect2: error: ld returned 1 exit status

            Assignee:
            Patricio Chilano Mateo
            Reporter:
            David Holmes
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved: