8237753: 32-bit builds are broken after JDK-823059

Changed _pending_threads to be 32 bits instead of 64

Reviewed-by: dholmes